fix(checkbox): move label slightly to left
there is too much space between the label and the check box
making them feel detached.

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -43,6 +43,7 @@
 
     label {
         line-height: normal;
+        padding-left: 0;
 
         &.mdc-checkbox--disabled {
             opacity: 0.37;
